--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-generate-unique-key-for-map": "^1.0.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "typeface-roboto-mono": "^1.1.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
