--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-dom": "^18.2.0",
     "react-generate-unique-key-for-map": "^1.0.3",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^4.0.5",
+    "react-sliding-side-panel": "^2.0.3",
+    "react-svg-star-rating": "^2.1.2",
     "styled-components": "^5.3.5",
     "typeface-roboto-mono": "^1.1.13",
     "web-vitals": "^2.1.0"
