--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-generate-unique-key-for-map": "^1.0.3",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^4.0.5",
     "react-sliding-side-panel": "^2.0.3",
