[ adding ] - navigation mobile

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-generate-unique-key-for-map": "^1.0.3",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-simple-dropdown": "^3.2.3",
     "react-simple-star-rating": "^4.0.5",
+    "react-sliding-pane": "^7.1.0",
     "react-sliding-side-panel": "^2.0.3",
     "react-svg-star-rating": "^2.1.2",
     "styled-components": "^5.3.5",
