--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-svg-star-rating": "^2.1.2",
     "styled-components": "^5.3.5",
     "typeface-roboto-mono": "^1.1.13",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
