--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-generate-unique-key-for-map": "^1.0.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-simple-dropdown": "^3.2.3",
@@ -16,6 +17,8 @@
     "react-sliding-pane": "^7.1.0",
     "react-sliding-side-panel": "^2.0.3",
     "react-svg-star-rating": "^2.1.2",
+    "redux": "^4.2.0",
+    "redux-resource": "^3.1.1",
     "styled-components": "^5.3.5",
     "typeface-roboto-mono": "^1.1.13",
     "web-vitals": "^2.1.0",
