--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.2.0",
     "react-generate-unique-key-for-map": "^1.0.3",
     "react-redux": "^8.0.2",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-dropdown": "^3.2.3",
     "react-simple-star-rating": "^4.0.5",
